--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                             <p>Bouquets your mom will love!</p>
 
                             <ul class="slider-btn">
-                                <li><a href="shop-single.php" class="btn btn-round btn-primary">Start Shopping</a></li>
+                                <li><a href="trading/shop-single.php" class="btn btn-round btn-primary">Start Shopping</a></li>
                             </ul>
                         </div>
                     </div>
@@ -348,91 +348,91 @@
                                 <div class="swiper-slide">
                                     <div class="single-product">
                                         <div class="product-image">
-                                            <a href="shop-single.php">
+                                            <a href="trading/shop-single.php">
                                                 <img src="assets/images/product/Birthday.png" alt="">
                                             </a>
                                         </div>
                                         <div class="product-content text-center">
-                                            <h4 class="product-name"><a href="shop-single.php">Birthday</a></h4>
+                                            <h4 class="product-name"><a href="trading/shop-single.php">Birthday</a></h4>
                                         </div>
                                     </div>
 
                                     <div class="single-product">
                                         <div class="product-image">
-                                            <a href="shop-single.php">
+                                            <a href="trading/shop-single.php">
                                                 <img src="assets/images/product/Sympathy.png" alt="">
                                             </a>
                                         </div>
                                         <div class="product-content text-center">
-                                            <h4 class="product-name"><a href="shop-single.php">Sympathy</a></h4>
+                                            <h4 class="product-name"><a href="trading/shop-single.php">Sympathy</a></h4>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
                                     <div class="single-product">
                                         <div class="product-image">
-                                            <a href="shop-single.php">
+                                            <a href="trading/shop-single.php">
                                                 <img src="assets/images/product/getWell.png" alt="">
                                             </a>
                                         </div>
                                         <div class="product-content text-center">
-                                            <h4 class="product-name"><a href="shop-single.php">Get Well</a></h4>
+                                            <h4 class="product-name"><a href="trading/shop-single.php">Get Well</a></h4>
                                         </div>
                                     </div>
 
                                     <div class="single-product">
                                         <div class="product-image">
-                                            <a href="shop-single.php">
+                                            <a href="trading/shop-single.php">
                                                 <img src="assets/images/product/Anniversary.png" alt="">
                                             </a>
                                         </div>
                                         <div class="product-content text-center">
-                                            <h4 class="product-name"><a href="shop-single.php">Anniversary</a></h4>
+                                            <h4 class="product-name"><a href="trading/shop-single.php">Anniversary</a></h4>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
                                     <div class="single-product">
                                         <div class="product-image">
-                                            <a href="shop-single.php">
+                                            <a href="trading/shop-single.php">
                                                 <img src="assets/images/product/JustBecause.png" alt="">
                                             </a>
                                         </div>
                                         <div class="product-content text-center">
-                                            <h4 class="product-name"><a href="shop-single.php">Just Because</a></h4>
+                                            <h4 class="product-name"><a href="trading/shop-single.php">Just Because</a></h4>
                                         </div>
                                     </div>
                                     <div class="single-product">
                                         <div class="product-image">
-                                            <a href="shop-single.php">
+                                            <a href="trading/shop-single.php">
                                                 <img src="assets/images/product/Best%20Sellers.png" alt="">
                                             </a>
                                         </div>
                                         <div class="product-content text-center">
-                                            <h4 class="product-name"><a href="shop-single.php">Best Sellers</a></h4>
+                                            <h4 class="product-name"><a href="trading/shop-single.php">Best Sellers</a></h4>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
                                     <div class="single-product">
                                         <div class="product-image">
-                                            <a href="shop-single.php">
+                                            <a href="trading/shop-single.php">
                                                 <img src="assets/images/product/Plants.png" alt="">
                                             </a>
                                         </div>
                                         <div class="product-content text-center">
-                                            <h4 class="product-name"><a href="shop-single.php">Plants</a></h4>
+                                            <h4 class="product-name"><a href="trading/shop-single.php">Plants</a></h4>
                                         </div>
                                     </div>
 
                                     <div class="single-product">
                                         <div class="product-image">
-                                            <a href="shop-single.php">
+                                            <a href="trading/shop-single.php">
                                                 <img src="assets/images/product/Gifts.png" alt="">
                                             </a>
                                         </div>
                                         <div class="product-content text-center">
-                                            <h4 class="product-name"><a href="shop-single.php">Gifts</a></h4>
+                                            <h4 class="product-name"><a href="trading/shop-single.php">Gifts</a></h4>
                                         </div>
                                     </div>
                                 </div>
@@ -554,7 +554,7 @@
                         <div class="swiper-slide">
                             <div class="single-product">
                                 <div class="product-image">
-                                    <a href="shop-single.php">
+                                    <a href="trading/shop-single.php">
                                         <img src="assets/images/product/product-1.jpg" alt="">
                                     </a>
                                     <span class="sticker-new soldout-title">Soldout</span>
@@ -576,7 +576,7 @@
                                         <li class="rating-on"><i class="fa fa-star-o"></i></li>
                                         <li class="rating-on"><i class="fa fa-star-o"></i></li>
                                     </ul>
-                                    <h4 class="product-name"><a href="shop-single.php">Spring Snowflake</a></h4>
+                                    <h4 class="product-name"><a href="trading/shop-single.php">Spring Snowflake</a></h4>
                                     <div class="price-box">
                                         <span class="current-price">$19.00</span>
                                         <span class="old-price">$29.00</span>
@@ -587,7 +587,7 @@
                         <div class="swiper-slide">
                             <div class="single-product">
                                 <div class="product-image">
-                                    <a href="shop-single.php">
+                                    <a href="trading/shop-single.php">
                                         <img src="assets/images/product/product-2.jpg" alt="">
                                     </a>
                                     <div class="action-links">
@@ -607,7 +607,7 @@
                                         <li class="rating-on"><i class="fa fa-star-o"></i></li>
                                         <li class="rating-on"><i class="fa fa-star-o"></i></li>
                                     </ul>
-                                    <h4 class="product-name"><a href="shop-single.php">Rock Soapwort</a></h4>
+                                    <h4 class="product-name"><a href="trading/shop-single.php">Rock Soapwort</a></h4>
                                     <div class="price-box">
                                         <span class="current-price">$50.00</span>
                                     </div>
@@ -617,7 +617,7 @@
                         <div class="swiper-slide">
                             <div class="single-product">
                                 <div class="product-image">
-                                    <a href="shop-single.php">
+                                    <a href="trading/shop-single.php">
                                         <img src="assets/images/product/product-3.jpg" alt="">
                                     </a>
 
@@ -645,7 +645,7 @@
                                         <li class="rating-on"><i class="fa fa-star-o"></i></li>
                                         <li class="rating-on"><i class="fa fa-star-o"></i></li>
                                     </ul>
-                                    <h4 class="product-name"><a href="shop-single.php">Scarlet Sage</a></h4>
+                                    <h4 class="product-name"><a href="trading/shop-single.php">Scarlet Sage</a></h4>
                                     <div class="price-box">
                                         <span class="current-price">$39.00</span>
                                         <span class="old-price">$60.00</span>
@@ -656,7 +656,7 @@
                         <div class="swiper-slide">
                             <div class="single-product">
                                 <div class="product-image">
-                                    <a href="shop-single.php">
+                                    <a href="trading/shop-single.php">
                                         <img src="assets/images/product/product-4.jpg" alt="">
                                     </a>
 
@@ -677,7 +677,7 @@
                                         <li class="rating-on"><i class="fa fa-star-o"></i></li>
                                         <li class="rating-on"><i class="fa fa-star-o"></i></li>
                                     </ul>
-                                    <h4 class="product-name"><a href="shop-single.php">Foxglove Flower</a></h4>
+                                    <h4 class="product-name"><a href="trading/shop-single.php">Foxglove Flower</a></h4>
                                     <div class="price-box">
                                         <span class="current-price">$79.00</span>
                                     </div>
@@ -687,7 +687,7 @@
                         <div class="swiper-slide">
                             <div class="single-product">
                                 <div class="product-image">
-                                    <a href="shop-single.php">
+                                    <a href="trading/shop-single.php">
                                         <img src="assets/images/product/product-5.jpg" alt="">
                                     </a>
 
@@ -710,7 +710,7 @@
                                         <li class="rating-on"><i class="fa fa-star-o"></i></li>
                                         <li class="rating-on"><i class="fa fa-star-o"></i></li>
                                     </ul>
-                                    <h4 class="product-name"><a href="shop-single.php">Summer Savory</a></h4>
+                                    <h4 class="product-name"><a href="trading/shop-single.php">Summer Savory</a></h4>
                                     <div class="price-box">
                                         <span class="current-price">$40.00</span>
                                         <span class="old-price">$85.00</span>
@@ -721,7 +721,7 @@
                         <div class="swiper-slide">
                             <div class="single-product">
                                 <div class="product-image">
-                                    <a href="shop-single.php">
+                                    <a href="trading/shop-single.php">
                                         <img src="assets/images/product/product-6.jpg" alt="">
                                     </a>
 
@@ -744,7 +744,7 @@
                                         <li class="rating-on"><i class="fa fa-star-o"></i></li>
                                         <li class="rating-on"><i class="fa fa-star-o"></i></li>
                                     </ul>
-                                    <h4 class="product-name"><a href="shop-single.php">Wild Roses</a></h4>
+                                    <h4 class="product-name"><a href="trading/shop-single.php">Wild Roses</a></h4>
                                     <div class="price-box">
                                         <span class="current-price">$19.00</span>
                                         <span class="old-price">$21.00</span>
@@ -755,7 +755,7 @@
                         <div class="swiper-slide">
                             <div class="single-product">
                                 <div class="product-image">
-                                    <a href="shop-single.php">
+                                    <a href="trading/shop-single.php">
                                         <img src="assets/images/product/product-7.jpg" alt="">
                                     </a>
 
@@ -776,7 +776,7 @@
                                         <li class="rating-on"><i class="fa fa-star-o"></i></li>
                                         <li class="rating-on"><i class="fa fa-star-o"></i></li>
                                     </ul>
-                                    <h4 class="product-name"><a href="shop-single.php">Sweet Alyssum</a></h4>
+                                    <h4 class="product-name"><a href="trading/shop-single.php">Sweet Alyssum</a></h4>
                                     <div class="price-box">
                                         <span class="current-price">$50.00</span>
                                     </div>
@@ -786,7 +786,7 @@
                         <div class="swiper-slide">
                             <div class="single-product">
                                 <div class="product-image">
-                                    <a href="shop-single.php">
+                                    <a href="trading/shop-single.php">
                                         <img src="assets/images/product/product-8.jpg" alt="">
                                     </a>
 
@@ -809,7 +809,7 @@
                                         <li class="rating-on"><i class="fa fa-star-o"></i></li>
                                         <li class="rating-on"><i class="fa fa-star-o"></i></li>
                                     </ul>
-                                    <h4 class="product-name"><a href="shop-single.php">Lity Majesty Palm</a></h4>
+                                    <h4 class="product-name"><a href="trading/shop-single.php">Lity Majesty Palm</a></h4>
                                     <div class="price-box">
                                         <span class="current-price">$19.00</span>
                                         <span class="old-price">$29.00</span>
@@ -820,7 +820,7 @@
                         <div class="swiper-slide">
                             <div class="single-product">
                                 <div class="product-image">
-                                    <a href="shop-single.php">
+                                    <a href="trading/shop-single.php">
                                         <img src="assets/images/product/product-9.jpg" alt="">
                                     </a>
 
@@ -843,7 +843,7 @@
                                         <li class="rating-on"><i class="fa fa-star-o"></i></li>
                                         <li class="rating-on"><i class="fa fa-star-o"></i></li>
                                     </ul>
-                                    <h4 class="product-name"><a href="shop-single.php">Majesty Palm</a></h4>
+                                    <h4 class="product-name"><a href="trading/shop-single.php">Majesty Palm</a></h4>
                                     <div class="price-box">
                                         <span class="current-price">$19.00</span>
                                         <span class="old-price">$29.00</span>
