--- a/shop-single-zh.html
+++ b/shop-single-zh.html
@@ -97,7 +97,7 @@
                                                 <a class="mega-title" href="#">商店单</a>
 
                                                 <ul class="mega-item">
-                                                    <li><a href="shop-single.php">商店单</a></li>
+                                                    <li><a href="trading/shop-single.php">商店单</a></li>
                                                     <li><a href="shop-single-affiliate.html">商店单分支</a>
                                                     </li>
                                                     <li><a href="shop-single-variable.html">商店单变量</a>
@@ -194,12 +194,12 @@
                                         <li class="product-cart">
                                             <div class="single-cart-box">
                                                 <div class="cart-img">
-                                                    <a href="shop-single.php"><img src="assets/images/cart/cart-1.jpg"
-                                                                                   alt=""></a>
+                                                    <a href="trading/shop-single.php"><img src="assets/images/cart/cart-1.jpg"
+                                                                                           alt=""></a>
                                                     <span class="pro-quantity">1x</span>
                                                 </div>
                                                 <div class="cart-content">
-                                                    <h6 class="title"><a href="shop-single.php">岩石肥皂草</a></h6>
+                                                    <h6 class="title"><a href="trading/shop-single.php">岩石肥皂草</a></h6>
                                                     <div class="cart-price">
                                                         <span class="sale-price">$70.00</span>
                                                         <span class="regular-price">$80.00</span>
@@ -210,12 +210,12 @@
                                             </div>
                                             <div class="single-cart-box">
                                                 <div class="cart-img">
-                                                    <a href="shop-single.php"><img src="assets/images/cart/cart-2.jpg"
-                                                                                   alt=""></a>
+                                                    <a href="trading/shop-single.php"><img src="assets/images/cart/cart-2.jpg"
+                                                                                           alt=""></a>
                                                     <span class="pro-quantity">1x</span>
                                                 </div>
                                                 <div class="cart-content">
-                                                    <h6 class="title"><a href="shop-single.php">岩石肥皂草</a></h6>
+                                                    <h6 class="title"><a href="trading/shop-single.php">岩石肥皂草</a></h6>
                                                     <div class="cart-price">
                                                         <span class="sale-price">$70.00</span>
                                                         <span class="regular-price">$80.00</span>
@@ -226,12 +226,12 @@
                                             </div>
                                             <div class="single-cart-box">
                                                 <div class="cart-img">
-                                                    <a href="shop-single.php"><img src="assets/images/cart/cart-3.jpg"
-                                                                                   alt=""></a>
+                                                    <a href="trading/shop-single.php"><img src="assets/images/cart/cart-3.jpg"
+                                                                                           alt=""></a>
                                                     <span class="pro-quantity">1x</span>
                                                 </div>
                                                 <div class="cart-content">
-                                                    <h6 class="title"><a href="shop-single.php">岩石肥皂草</a></h6>
+                                                    <h6 class="title"><a href="trading/shop-single.php">岩石肥皂草</a></h6>
                                                     <div class="cart-price">
                                                         <span class="sale-price">$70.00</span>
                                                         <span class="regular-price">$80.00</span>
@@ -348,7 +348,7 @@
                                 <a class="mega-title" href="#">商店单</a>
 
                                 <ul class="mega-item">
-                                    <li><a href="shop-single.php">商店单</a></li>
+                                    <li><a href="trading/shop-single.php">商店单</a></li>
                                     <li><a href="shop-single-affiliate.html">商店单分支</a>
                                     </li>
                                     <li><a href="shop-single-variable.html">商店单变量</a>
@@ -735,7 +735,7 @@
                         <div class="swiper-slide">
                             <div class="single-product">
                                 <div class="product-image">
-                                    <a href="shop-single.php">
+                                    <a href="trading/shop-single.php">
                                         <img src="assets/images/product/product-1.jpg" alt="">
                                     </a>
                                     <span class="sticker-new soldout-title">售罄</span>
@@ -762,7 +762,7 @@
                                         <li class="rating-on"><i class="fa fa-star-o"></i></li>
                                         <li class="rating-on"><i class="fa fa-star-o"></i></li>
                                     </ul>
-                                    <h4 class="product-name"><a href="shop-single.php">春雪片莲</a></h4>
+                                    <h4 class="product-name"><a href="trading/shop-single.php">春雪片莲</a></h4>
                                     <div class="price-box">
                                         <span class="current-price">$19.00</span>
                                         <span class="old-price">$29.00</span>
@@ -773,7 +773,7 @@
                         <div class="swiper-slide">
                             <div class="single-product">
                                 <div class="product-image">
-                                    <a href="shop-single.php">
+                                    <a href="trading/shop-single.php">
                                         <img src="assets/images/product/product-2.jpg" alt="">
                                     </a>
                                     <div class="action-links">
@@ -798,7 +798,7 @@
                                         <li class="rating-on"><i class="fa fa-star-o"></i></li>
                                         <li class="rating-on"><i class="fa fa-star-o"></i></li>
                                     </ul>
-                                    <h4 class="product-name"><a href="shop-single.php">岩石肥皂草</a></h4>
+                                    <h4 class="product-name"><a href="trading/shop-single.php">岩石肥皂草</a></h4>
                                     <div class="price-box">
                                         <span class="current-price">$50.00</span>
                                     </div>
@@ -808,7 +808,7 @@
                         <div class="swiper-slide">
                             <div class="single-product">
                                 <div class="product-image">
-                                    <a href="shop-single.php">
+                                    <a href="trading/shop-single.php">
                                         <img src="assets/images/product/product-3.jpg" alt="">
                                     </a>
 
@@ -841,7 +841,7 @@
                                         <li class="rating-on"><i class="fa fa-star-o"></i></li>
                                         <li class="rating-on"><i class="fa fa-star-o"></i></li>
                                     </ul>
-                                    <h4 class="product-name"><a href="shop-single.php">一串红</a></h4>
+                                    <h4 class="product-name"><a href="trading/shop-single.php">一串红</a></h4>
                                     <div class="price-box">
                                         <span class="current-price">$39.00</span>
                                         <span class="old-price">$60.00</span>
@@ -852,7 +852,7 @@
                         <div class="swiper-slide">
                             <div class="single-product">
                                 <div class="product-image">
-                                    <a href="shop-single.php">
+                                    <a href="trading/shop-single.php">
                                         <img src="assets/images/product/product-4.jpg" alt="">
                                     </a>
 
@@ -878,7 +878,7 @@
                                         <li class="rating-on"><i class="fa fa-star-o"></i></li>
                                         <li class="rating-on"><i class="fa fa-star-o"></i></li>
                                     </ul>
-                                    <h4 class="product-name"><a href="shop-single.php">毛地黄花</a></h4>
+                                    <h4 class="product-name"><a href="trading/shop-single.php">毛地黄花</a></h4>
                                     <div class="price-box">
                                         <span class="current-price">$79.00</span>
                                     </div>
@@ -888,7 +888,7 @@
                         <div class="swiper-slide">
                             <div class="single-product">
                                 <div class="product-image">
-                                    <a href="shop-single.php">
+                                    <a href="trading/shop-single.php">
                                         <img src="assets/images/product/product-5.jpg" alt="">
                                     </a>
 
@@ -916,7 +916,7 @@
                                         <li class="rating-on"><i class="fa fa-star-o"></i></li>
                                         <li class="rating-on"><i class="fa fa-star-o"></i></li>
                                     </ul>
-                                    <h4 class="product-name"><a href="shop-single.php">盛夏滋味</a></h4>
+                                    <h4 class="product-name"><a href="trading/shop-single.php">盛夏滋味</a></h4>
                                     <div class="price-box">
                                         <span class="current-price">$40.00</span>
                                         <span class="old-price">$85.00</span>
@@ -927,7 +927,7 @@
                         <div class="swiper-slide">
                             <div class="single-product">
                                 <div class="product-image">
-                                    <a href="shop-single.php">
+                                    <a href="trading/shop-single.php">
                                         <img src="assets/images/product/product-6.jpg" alt="">
                                     </a>
 
@@ -955,7 +955,7 @@
                                         <li class="rating-on"><i class="fa fa-star-o"></i></li>
                                         <li class="rating-on"><i class="fa fa-star-o"></i></li>
                                     </ul>
-                                    <h4 class="product-name"><a href="shop-single.php">野玫瑰</a></h4>
+                                    <h4 class="product-name"><a href="trading/shop-single.php">野玫瑰</a></h4>
                                     <div class="price-box">
                                         <span class="current-price">$19.00</span>
                                         <span class="old-price">$21.00</span>
@@ -966,7 +966,7 @@
                         <div class="swiper-slide">
                             <div class="single-product">
                                 <div class="product-image">
-                                    <a href="shop-single.php">
+                                    <a href="trading/shop-single.php">
                                         <img src="assets/images/product/product-7.jpg" alt="">
                                     </a>
 
@@ -992,7 +992,7 @@
                                         <li class="rating-on"><i class="fa fa-star-o"></i></li>
                                         <li class="rating-on"><i class="fa fa-star-o"></i></li>
                                     </ul>
-                                    <h4 class="product-name"><a href="shop-single.php">香雪球</a></h4>
+                                    <h4 class="product-name"><a href="trading/shop-single.php">香雪球</a></h4>
                                     <div class="price-box">
                                         <span class="current-price">$50.00</span>
                                     </div>
@@ -1002,7 +1002,7 @@
                         <div class="swiper-slide">
                             <div class="single-product">
                                 <div class="product-image">
-                                    <a href="shop-single.php">
+                                    <a href="trading/shop-single.php">
                                         <img src="assets/images/product/product-8.jpg" alt="">
                                     </a>
 
@@ -1030,7 +1030,7 @@
                                         <li class="rating-on"><i class="fa fa-star-o"></i></li>
                                         <li class="rating-on"><i class="fa fa-star-o"></i></li>
                                     </ul>
-                                    <h4 class="product-name"><a href="shop-single.php">横威严棕榈</a></h4>
+                                    <h4 class="product-name"><a href="trading/shop-single.php">横威严棕榈</a></h4>
                                     <div class="price-box">
                                         <span class="current-price">$19.00</span>
                                         <span class="old-price">$29.00</span>
@@ -1041,7 +1041,7 @@
                         <div class="swiper-slide">
                             <div class="single-product">
                                 <div class="product-image">
-                                    <a href="shop-single.php">
+                                    <a href="trading/shop-single.php">
                                         <img src="assets/images/product/product-9.jpg" alt="">
                                     </a>
 
@@ -1069,7 +1069,7 @@
                                         <li class="rating-on"><i class="fa fa-star-o"></i></li>
                                         <li class="rating-on"><i class="fa fa-star-o"></i></li>
                                     </ul>
-                                    <h4 class="product-name"><a href="shop-single.php">陛下棕榈</a></h4>
+                                    <h4 class="product-name"><a href="trading/shop-single.php">陛下棕榈</a></h4>
                                     <div class="price-box">
                                         <span class="current-price">$19.00</span>
                                         <span class="old-price">$29.00</span>
