--- a/cart.html
+++ b/cart.html
@@ -99,7 +99,7 @@
                                                 <a class="mega-title" href="#">Shop Single</a>
 
                                                 <ul class="mega-item">
-                                                    <li><a href="shop-single.php">Shop Single</a></li>
+                                                    <li><a href="trading/shop-single.php">Shop Single</a></li>
                                                     <li><a href="shop-single-affiliate.html">Shop Single Affiliate</a>
                                                     </li>
                                                     <li><a href="shop-single-variable.html">Shop Single Variable</a>
@@ -198,12 +198,12 @@
                                         <li class="product-cart">
                                             <div class="single-cart-box">
                                                 <div class="cart-img">
-                                                    <a href="shop-single.php"><img src="assets/images/cart/cart-1.jpg"
-                                                                                   alt=""></a>
+                                                    <a href="trading/shop-single.php"><img src="assets/images/cart/cart-1.jpg"
+                                                                                           alt=""></a>
                                                     <span class="pro-quantity">1x</span>
                                                 </div>
                                                 <div class="cart-content">
-                                                    <h6 class="title"><a href="shop-single.php">Rock Soapwort</a></h6>
+                                                    <h6 class="title"><a href="trading/shop-single.php">Rock Soapwort</a></h6>
                                                     <div class="cart-price">
                                                         <span class="sale-price">$70.00</span>
                                                         <span class="regular-price">$80.00</span>
@@ -214,12 +214,12 @@
                                             </div>
                                             <div class="single-cart-box">
                                                 <div class="cart-img">
-                                                    <a href="shop-single.php"><img src="assets/images/cart/cart-2.jpg"
-                                                                                   alt=""></a>
+                                                    <a href="trading/shop-single.php"><img src="assets/images/cart/cart-2.jpg"
+                                                                                           alt=""></a>
                                                     <span class="pro-quantity">1x</span>
                                                 </div>
                                                 <div class="cart-content">
-                                                    <h6 class="title"><a href="shop-single.php">Rock Soapwort</a></h6>
+                                                    <h6 class="title"><a href="trading/shop-single.php">Rock Soapwort</a></h6>
                                                     <div class="cart-price">
                                                         <span class="sale-price">$70.00</span>
                                                         <span class="regular-price">$80.00</span>
@@ -230,12 +230,12 @@
                                             </div>
                                             <div class="single-cart-box">
                                                 <div class="cart-img">
-                                                    <a href="shop-single.php"><img src="assets/images/cart/cart-3.jpg"
-                                                                                   alt=""></a>
+                                                    <a href="trading/shop-single.php"><img src="assets/images/cart/cart-3.jpg"
+                                                                                           alt=""></a>
                                                     <span class="pro-quantity">1x</span>
                                                 </div>
                                                 <div class="cart-content">
-                                                    <h6 class="title"><a href="shop-single.php">Rock Soapwort</a></h6>
+                                                    <h6 class="title"><a href="trading/shop-single.php">Rock Soapwort</a></h6>
                                                     <div class="cart-price">
                                                         <span class="sale-price">$70.00</span>
                                                         <span class="regular-price">$80.00</span>
@@ -351,7 +351,7 @@
                                 <a class="mega-title" href="#">Shop Single</a>
 
                                 <ul class="mega-item">
-                                    <li><a href="shop-single.php">Shop Single</a></li>
+                                    <li><a href="trading/shop-single.php">Shop Single</a></li>
                                     <li><a href="shop-single-affiliate.html">Shop Single Affiliate</a></li>
                                     <li><a href="shop-single-variable.html">Shop Single Variable</a></li>
                                     <li><a href="shop-single-group.html">Shop Single Group</a></li>
