--- a/index-zh.html
+++ b/index-zh.html
@@ -332,7 +332,7 @@
                 <div class="col-lg-5 col-md-7 col-sm-9">
                     <div class="section-title text-center">
 
-                        <img src="image/Title/花.png">
+                        <img src="image/Title/花_zh.png">
                     </div>
                 </div>
             </div>
@@ -542,7 +542,7 @@
                 <div class="col-lg-5 col-md-7 col-sm-9">
                     <div class="section-title text-center">
 
-                        <img src="image/Title/reword.png">
+                        <img src="image/Title/reword_zh.png">
                     </div>
                 </div>
             </div>
