--- a/index-zh.html
+++ b/index-zh.html
@@ -475,7 +475,7 @@
                                     <p>我种花已经十多年了。一开始，我种了一些叶子植物和木本植物。花开得很少，阳台看起来是绿色的……</p>
 
                                     <div class="blog-footer">
-                                        <a class="more" href="blog-single-right-sidebar.html">Continue Reading</a>
+                                        <a class="more" href="blog-single-right-sidebar.html">查看更多</a>
                                         <p class="comment-count"><i class="icon-message-circle"></i> 0</p>
                                     </div>
                                 </div>
@@ -494,7 +494,7 @@
                                     <p>植物在装饰客厅的同时，也增加了空气的湿度和舒适度。刚剪下来的鲜花每周都会带回来新的。不同的心情，不同的季节，不同的花和颜色……</p>
 
                                     <div class="blog-footer">
-                                        <a class="more" href="blog-single-right-sidebar.html">Continue Reading</a>
+                                        <a class="more" href="blog-single-right-sidebar.html">查看更多</a>
                                         <p class="comment-count"><i class="icon-message-circle"></i> 0</p>
                                     </div>
                                 </div>
