Fixed the contact us function

--- a/cart.html
+++ b/cart.html
@@ -66,14 +66,14 @@
                 <div class="row align-items-center">
                     <div class="col-lg-2">
                         <div class="header-logo">
-                            <a href="index.html"><img src="assets/images/logo/logo.png" alt=""></a>
+                            <a href="index.php"><img src="assets/images/logo/logo.png" alt=""></a>
                         </div>
                     </div>
                     <div class="col-lg-7 position-static">
                         <div class="site-main-nav">
                             <nav class="site-nav">
                                 <ul>
-                                    <li><a href="index.html">Home</a></li>
+                                    <li><a href="index.php">Home</a></li>
                                     <li>
                                         <a href="#">Shop <span class="new">New</span></a>
 
@@ -271,7 +271,7 @@
             <div class="row align-items-center">
                 <div class="col-6">
                     <div class="header-logo">
-                        <a href="index.html"><img src="assets/images/logo/logo.png" alt=""></a>
+                        <a href="index.php"><img src="assets/images/logo/logo.png" alt=""></a>
                     </div>
                 </div>
                 <div class="col-6">
@@ -329,7 +329,7 @@
         <div class="site-main-nav">
             <nav class="site-nav">
                 <ul class="navbar-mobile-wrapper">
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index.php">Home</a></li>
                     <li>
                         <a href="#">Shop <span class="new">New</span></a>
 
@@ -438,7 +438,7 @@
             <div class="page-banner-content text-center">
                 <h2 class="title">Your Shopping Cart</h2>
                 <ol class="breadcrumb justify-content-center">
-                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                    <li class="breadcrumb-item"><a href="index.php">Home</a></li>
                     <li class="breadcrumb-item active" aria-current="page">Your Shopping Cart</li>
                 </ol>
             </div>
