--- a/index-zh.html
+++ b/index-zh.html
@@ -27,7 +27,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-2">
                         <div class="header-logo">
-                            <a href="index.html"><img src="assets/images/logo/logo.png" alt=""></a>
+                            <a href="index.php"><img src="assets/images/logo/logo.png" alt=""></a>
                         </div>
                     </div>
                     <div class="col-lg-7 position-static">
@@ -133,7 +133,7 @@
                                     </div>
                             <div style="margin-left: 8%; margin-right: 5%;"><a href="index-zh.html">zh</a></div>
                             <div style="float:left;width: 1px;height: 20px; background: darkgray;"></div>
-                            <div style="margin-left: 5%;"><a href="index.html">en</a> </div>
+                            <div style="margin-left: 5%;"><a href="index.php">en</a> </div>
                             </div>
                         </div>
                     </div>
