--- a/loggedin-index.html
+++ b/loggedin-index.html
@@ -27,14 +27,14 @@
                 <div class="row align-items-center">
                     <div class="col-lg-2">
                         <div class="header-logo">
-                            <a href="index.html"><img src="assets/images/logo/logo.png" alt=""></a>
+                            <a href="index.php"><img src="assets/images/logo/logo.png" alt=""></a>
                         </div>
                     </div>
                     <div class="col-lg-7 position-static">
                         <div class="site-main-nav">
                             <nav class="site-nav">
                                 <ul>
-                                    <li><a href="index.html">Home</a></li>
+                                    <li><a href="index.php">Home</a></li>
                                     <li>
                                         <a href="#">Shop <span class="new">New</span></a>
 
@@ -126,7 +126,7 @@
                                     <a role="button" data-toggle="dropdown"><i class="icon-user2"></i></a>
                                     <ul class="dropdown-menu ">
                                         <li><a href="Signup.html">Profile Settings</a></li>
-                                        <li><a href="index.html">Log Out</a></li>
+                                        <li><a href="index.php">Log Out</a></li>
                                     </ul>
                                 </div>
                                 <div class="header-account-list mini-cart">
@@ -154,7 +154,7 @@
             <div class="row align-items-center">
                 <div class="col -6">
                     <div class="header-logo">
-                        <a href="index.html"><img src="assets/images/logo/logo_small.png" alt=""></a>
+                        <a href="index.php"><img src="assets/images/logo/logo_small.png" alt=""></a>
                     </div>
                 </div>
                 <div class="col-6">
@@ -215,7 +215,7 @@
         <div class="site-main-nav">
             <nav class="site-nav">
                 <ul class="navbar-mobile-wrapper">
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index.php">Home</a></li>
                     <li>
                         <a href="#">Shop</a>
 
