--- a/shop-single-zh.html
+++ b/shop-single-zh.html
@@ -66,14 +66,14 @@
                 <div class="row align-items-center">
                     <div class="col-lg-2">
                         <div class="header-logo">
-                            <a href="index.html"><img src="assets/images/logo/logo.png" alt=""></a>
+                            <a href="index.php"><img src="assets/images/logo/logo.png" alt=""></a>
                         </div>
                     </div>
                     <div class="col-lg-7 position-static">
                         <div class="site-main-nav">
                             <nav class="site-nav">
                                 <ul>
-                                    <li><a href="index.html">主页</a></li>
+                                    <li><a href="index.php">主页</a></li>
                                     <li>
                                         <a href="#">商店 <span class="new">新</span></a>
 
@@ -267,7 +267,7 @@
             <div class="row align-items-center">
                 <div class="col-6">
                     <div class="header-logo">
-                        <a href="index.html"><img src="assets/images/logo/logo.png" alt=""></a>
+                        <a href="index.php"><img src="assets/images/logo/logo.png" alt=""></a>
                     </div>
                 </div>
                 <div class="col-6">
@@ -325,7 +325,7 @@
         <div class="site-main-nav">
             <nav class="site-nav">
                 <ul class="navbar-mobile-wrapper">
-                    <li><a href="index.html">主页</a></li>
+                    <li><a href="index.php">主页</a></li>
                     <li>
                         <a href="#">商店 <span class="new">新</span></a>
 
@@ -439,7 +439,7 @@
             <div class="page-banner-content text-center">
                 <h2 class="title">商店单</h2>
                 <ol class="breadcrumb justify-content-center">
-                    <li class="breadcrumb-item"><a href="index.html">主页</a></li>
+                    <li class="breadcrumb-item"><a href="index.php">主页</a></li>
                     <li class="breadcrumb-item"><a href="shop-grid-left-sidebar.html">商店</a></li>
                     <li class="breadcrumb-item active" aria-current="page">商店单</li>
                 </ol>
