--- a/trading/loggedin-index.html
+++ b/trading/loggedin-index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="../assets/css/plugins-min/plugins.min.css">
-    <link rel="stylesheet" href="../assets/css/style.min.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="../style/style.css">
     <link rel="shortcut  icon" href="../images/favicon.ico" type="image/x-icon" />
 
