--- a/1.html
+++ b/1.html
@@ -1,9 +1,8 @@
 <br />
-<font size='1'><table class='xdebug-error xe-uncaught-exception' dir='ltr' border='1' cellspacing='0' cellpadding='1'>
-    <tr><th align='left' bgcolor='#f57900' colspan="5"><span style='background-color: #cc0000; color: #fce94f; font-size: x-large;'>( ! )</span> Fatal error: Uncaught TypeError: mysqli_fetch_assoc(): Argument #1 ($result) must be of type mysqli_result, bool given in /Users/quesheng/PhpstormProjects/Group9-web/spread/success_help.php on line <i>9</i></th></tr>
-    <tr><th align='left' bgcolor='#f57900' colspan="5"><span style='background-color: #cc0000; color: #fce94f; font-size: x-large;'>( ! )</span> TypeError: mysqli_fetch_assoc(): Argument #1 ($result) must be of type mysqli_result, bool given in /Users/quesheng/PhpstormProjects/Group9-web/spread/success_help.php on line <i>9</i></th></tr>
+<font size='1'><table class='xdebug-error xe-warning' dir='ltr' border='1' cellspacing='0' cellpadding='1'>
+    <tr><th align='left' bgcolor='#f57900' colspan="5"><span style='background-color: #cc0000; color: #fce94f; font-size: x-large;'>( ! )</span> Warning: Trying to access array offset on value of type null in /Users/quesheng/PhpstormProjects/Group9-web/user/reset-back.php on line <i>10</i></th></tr>
     <tr><th align='left' bgcolor='#e9b96e' colspan='5'>Call Stack</th></tr>
     <tr><th align='center' bgcolor='#eeeeec'>#</th><th align='left' bgcolor='#eeeeec'>Time</th><th align='left' bgcolor='#eeeeec'>Memory</th><th align='left' bgcolor='#eeeeec'>Function</th><th align='left' bgcolor='#eeeeec'>Location</th></tr>
-    <tr><td bgcolor='#eeeeec' align='center'>1</td><td bgcolor='#eeeeec' align='center'>0.0002</td><td bgcolor='#eeeeec' align='right'>367456</td><td bgcolor='#eeeeec'>{main}(  )</td><td title='/Users/quesheng/PhpstormProjects/Group9-web/spread/success_help.php' bgcolor='#eeeeec'>.../success_help.php<b>:</b>0</td></tr>
-    <tr><td bgcolor='#eeeeec' align='center'>2</td><td bgcolor='#eeeeec' align='center'>0.0396</td><td bgcolor='#eeeeec' align='right'>415712</td><td bgcolor='#eeeeec'><a href='http://www.php.net/function.mysqli-fetch-assoc' target='_new'>mysqli_fetch_assoc</a>( <span>$result = </span><span>FALSE</span> )</td><td title='/Users/quesheng/PhpstormProjects/Group9-web/spread/success_help.php' bgcolor='#eeeeec'>.../success_help.php<b>:</b>9</td></tr>
+    <tr><td bgcolor='#eeeeec' align='center'>1</td><td bgcolor='#eeeeec' align='center'>0.0001</td><td bgcolor='#eeeeec' align='right'>367040</td><td bgcolor='#eeeeec'>{main}(  )</td><td title='/Users/quesheng/PhpstormProjects/Group9-web/user/reset-back.php' bgcolor='#eeeeec'>.../reset-back.php<b>:</b>0</td></tr>
 </table></font>
+200
